<resources>
    <string name="app_name">i-PMS</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">i-PMS</string>
    <string name="nav_header_subtitle">Powered by ingenious technologies</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_doctor_details">DoctorDetailsActivity</string>
    <string name="title_home">About</string>
    <string name="title_dashboard">Related</string>
    <string name="title_notifications">Map</string>

    <string name="title_1">Cool card</string>
    <string name="title_2">Ok card</string>
    <string name="title_3">Bad card</string>
    <string name="title_4">Ugly card</string>
    <string name="search">Search by thana/area</string>
    <!--Titles-->
    <string name="login_title">Login</string>
    <string name="signup_title">Sign up</string>

    <!--Welcome messages-->
    <string name="splash_welcome_txt">Easiest way to\nfind doctors</string>
    <string name="login_welcome_txt">Hello there !\nWelcome Back</string>
    <string name="signup_welcome_txt">Hello there !\nWelcome to you</string>

    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>


    <!--Button labels-->
    <string name="login_btn_label">Login</string>
    <string name="signup_btn_label">Signup</string>

    <string name="login_label">" Login"</string>
    <string name="signup_label">" Signup"</string>

    <string name="login_fb_btn_label">"{faw-facebook-f}    Login with Facebook"</string>
    <string name="signup_fb_btn_label">"{faw-facebook-f}    Signup with Facebook"</string>

    <string name="get_started_btn_label">Get Started</string>

    <!--Edit Text hints-->
    <string name="phone_hint">Phone</string>
    <string name="address_hint">Address</string>
    <string name="full_name_hint">Full Name</string>
    <string name="gender_hint">Gender</string>
    <string name="age_hint">Age</string>
    <string name="bloodgroup_hint">Blood Group</string>
    <string name="email_hint">E-mail/Phone</string>
    <string name="password_hint">Password</string>
    <string name="confirmpassword_hint">Confirm Password</string>


    <!--Misc texts-->
    <string name="forgot_password">Forgot password?</string>
    <string name="no_account">Don\’t have an account?</string>
    <string name="have_account">Have an account?</string>
    <string name="divider_or">OR</string>


    <string name="text_1">Lorem ipsum dolor sit amet, consectetur adipiscing elit.  Etiam eget ligula eu lectus lobortis condimentum.</string>

    <string name="map_api_key">AIzaSyAYexB9ObixIZ1mQOCWXSz1Cn51rhk-RfM</string>

</resources>
